# Repute-DAO

./: .gitattributes  .gitignore  Anchor.toml  README.md  TYPESCRIPT-FIXES.md  allfileshas.txt  fix-all-issues.sh  fix-build-issues.sh  fix-chai-types.sh  fix-remaining-issues.sh  fix-rust-issues.sh  fix-stack-issues.sh  fix-typescript-issues.sh  package-lock.json  package.json  run-fixes.sh  tsconfig.json
.anchor/test-ledger/: test-ledger-log.txt
programs/repute_dao/: Cargo.toml
programs/repute_dao/src/: lib.rs
repute_dao_program/: Anchor.toml  package-lock.json  package.json  tsconfig.json
repute_dao_program/app/program_client/: pda.ts  rpc.ts
repute_dao_program/programs/repute_dao/: Cargo.toml
repute_dao_program/programs/repute_dao/src/: error.rs  lib.rs
repute_dao_program/programs/repute_dao/src/instructions/: configure_role.rs  downvote.rs  get_user_role.rs  initialize.rs  mod.rs  reset_scores.rs  upvote.rs
repute_dao_program/programs/repute_dao/src/state/: mod.rs  program_state.rs  role.rs  user_score.rs  vote_record.rs
repute_dao_program/programs/repute_dao/tests/: configure_role.rs  downvote.rs  get_user_role.rs  initialize.rs  reset_scores.rs  upvote.rs
repute_dao_program/programs/repute_dao/tests/common/: mod.rs
repute_dao_program/tests/: repute_dao.ts
tests/: repute_dao.ts
