[package]
name = "repute_dao"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "repute_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"

bumpalo = "=3.14.0"


[dev-dependencies]
solana-sdk = "=2.3.1"
solana-program-test = "=2.3.3"
